fixed overflow-x bug for html and body tags

--- a/src/styles/base/config.scss
+++ b/src/styles/base/config.scss
@@ -30,7 +30,8 @@ $default-font-size: 16px;
   font-style: normal;
 }
 
-body {
+body,
+html {
   font-family: "Netflix sans", sans-serif;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
